[project]
name = "fortran-tools"
version = "0.1.0"
description = "ython tools for updating old Fortran code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]